--- a/src/School/NoteBundle/Resources/views/Sequence/show.html.twig
+++ b/src/School/NoteBundle/Resources/views/Sequence/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1>Sequence</h1>
+    <h1 class="text-center">D&eacute;tail sur une S&eacute;quence</h1>
 
     <table class="record_properties table">
         <tbody>
